feature: core styling set up

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         https://css-tricks.com/quoting-in-html-quotations-citations-and-blockquotes/#aa-hey-what-about-the-figure-element
         critique on: https://www.frontendmentor.io/solutions/testimonials-grid-section-pDG4eI238g
       -->
-        <figure class="client-quote">
+        <figure class="client-quote content-width">
           <blockquote>
             <p>
               “Sed ut perspiciatis unde omnis iste natus error sit voluptatem
@@ -71,7 +71,7 @@
           </figcaption>
         </figure>
       </section>
-      <section class="events">events here</section>
+      <section class="events content-width">events here</section>
     </main>
 
     <footer>
