feature: start hero, todo: yellow image overlay

--- a/index.html
+++ b/index.html
@@ -37,15 +37,17 @@
           use header when have subtitle
           https://mikebifulco.com/posts/semantic-html-heading-subtitle#using-h2-as-a-subtitle-for-an-h1-is-incorrect
       -->
-        <header>
-          <h1>Header goes here</h1>
-          <p>Less important text goes here</p>
-        </header>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat
-          aliquid minus nemo sed est.
-        </p>
-        <button>Read More</button>
+        <div class="hero-cta">
+          <header>
+            <h1>Header goes here</h1>
+            <p>Less important text goes here</p>
+          </header>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat
+            aliquid minus nemo sed est.
+          </p>
+          <a href="#" class="btn btn--small hero-button">Read More</a>
+        </div>
       </section>
       <section class="client-quotes">
         <!-- 
