feature: client quote

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             </p>
           </blockquote>
           <figcaption class="client-quote-author">
-            <p>John Smith</p>
-            <p>Corporation CEO, books author.</p>
+            <p class="author">John Smith</p>
+            <p class="title">Corporation CEO, books author.</p>
           </figcaption>
         </figure>
       </section>
