fix: move logo into own component

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       -->
       <div class="nav-content content-width">
         <!-- TODO: use image for logo and bar ? might be okay speed-wise if not use jQuery -->
-        <div class="logo">eventsy</div>
+        <div class="logo--light">eventsy</div>
         <div class="links">
           <a href="home.html" id="home">home</a> /
           <!-- prettier keeps collapsing about to line above -->
@@ -32,7 +32,6 @@
     <main>
       <!-- <div id="app"></div> -->
 
-      <!-- TODO: pull logo out into component or switch to image -->
       <section class="hero">
         <!-- SEMANTIC: 
           use header when have subtitle
@@ -79,7 +78,7 @@
 
     <footer>
       <div class="footer-content">
-        <div class="logo">eventsy</div>
+        <div class="logo--light">eventsy</div>
         <address>
           <p>420 Smoke St. Los Angeles, CA 46318</p>
           <p>(213)-467-2627</p>
