feature: start blog

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <!-- prettier-ignore -->
           <a href="about.html" id="about">about</a> /
           <a href="gallery.html" id="gallery">gallery</a> /
-          <a href="blog.html" id="blog">blog</a> /
+          <a href="#" id="blog">blog</a> /
           <a href="contact" id="contact">contact </a>
         </div>
       </div>
