fix: use logo image

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         https://stackoverflow.com/questions/665037/replacing-h1-text-with-a-logo-image-best-method-for-seo-and-accessibility
       -->
       <div class="nav-content content-width">
-        <!-- TODO: use image for logo and bar ? might be okay speed-wise if not use jQuery -->
-        <div class="logo--light">eventsy</div>
+        <img src="./images/logo/logo-black.png" alt="" id="navLogoImage" />
         <div class="links">
           <a href="#" id="home">home</a> /
           <!-- prettier keeps collapsing about to line above -->
@@ -35,7 +34,8 @@
 
     <footer>
       <div class="footer-content">
-        <div class="logo--light">eventsy</div>
+        <img src="./images/logo/logo-white.png" alt="" />
+
         <address>
           <p>420 Smoke St. Los Angeles, CA 46318</p>
           <p>(213)-467-2627</p>
