feature: about view

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a href="#" id="home">home</a> /
           <!-- prettier keeps collapsing about to line above -->
           <!-- prettier-ignore -->
-          <a href="about.html" id="about">about</a> /
+          <a href="#" id="about">about</a> /
           <a href="gallery.html" id="gallery">gallery</a> /
           <a href="#" id="blog">blog</a> /
           <a href="#" id="contact">contact </a>
