feature: gallery page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <!-- prettier keeps collapsing about to line above -->
           <!-- prettier-ignore -->
           <a href="#" id="about">about</a> /
-          <a href="gallery.html" id="gallery">gallery</a> /
+          <a href="#" id="gallery">gallery</a> /
           <a href="#" id="blog">blog</a> /
           <a href="#" id="contact">contact </a>
         </div>
